spring-books/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-books-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-books
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-books
    spec:
      containers:
      - name: spring-books
        image: merrillpe/spring-books:v1
        ports:
        - containerPort: 8083
