spring-books/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-books-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8083
    targetPort: 8083 
  selector:
    name: spring-books
